fix timer spacing

--- a/style.css
+++ b/style.css
@@ -506,8 +506,7 @@ footer {
     font-size: 0.85em;
     position: absolute;
     right: 20px;
-    bottom: 20px;
-    margin-top: 20%;
+    top: 100%
   }
 
   #copy-body {
